--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,47 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Calendário da Juju!
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button [disabled]="isToday" (click)="setToday()">Hoje</ion-button>
+    </ion-buttons>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-title>{{viewTitle}}</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button [disabled]="false" (click)="resetEvents()">
+        <ion-icon slot="icon-only" name="refresh"></ion-icon>
+      </ion-button>
+      <ion-button [disabled]="false" (click)="storeEvents()">
+        <ion-icon slot="icon-only" name="save"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+
+  <calendar [eventSource]="eventSource" [calendarMode]="calendar.mode" [currentDate]="calendar.currentDate"
+    (onCurrentDateChanged)="onCurrentDateChanged($event)" (onTitleChanged)="onViewTitleChanged($event)"
+    (onTimeSelected)="onTimeSelected($event)" [autoSelect]="false" [monthviewDisplayEventTemplate]="monthviewDisplayEvent"
+    [showEventDetail]="false">
+  </calendar>
+
+  <ng-template #monthviewDisplayEvent let-view="view" let-row="row" let-col="col" style="padding: 0;">
+    <div [ngClass]="getMonthviewEventColor(view.dates[row*7+col].events)">
+      {{view.dates[row*7+col].label}}
+    </div>
+  </ng-template>
+
+  <ion-toolbar>
+    <ion-title>
+      Contagem de Dias
+    </ion-title>
+  </ion-toolbar>
+  <ion-item><ion-icon name="ellipse" style="background-color: pink"></ion-icon> Na sua casa: {{ jujuDays }}</ion-item>
+  <ion-item><ion-icon name="ellipse" style="background-color: yellow"></ion-icon> Na minha casa: {{ mumuDays }}</ion-item>
+  <ion-item><ion-icon name="ellipse" style="background-color: lightblue"></ion-icon> Na pousada: {{ pousadaDays }}</ion-item>
 </ion-content>
